--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/css/style.css">
-    <title>Document</title>
+    <title>Excursion</title>
 </head>
 <body>
-    <h1>Disover hidden places in the world around you</h1>
-    <p><a href="">Download Excursion (Coming soon!)</a></p>
+    <header>
+        <h1>Disover hidden places in the world around you</h1>
+        <p id='top'><a href="">Download Excursion (Coming soon!)</a></p>
+    </header>
+        
+    <main>
+        <p class='video'><video src="resources/videos/excursion.mp4"></video></p>
+        <h2>Your personal travel guide</h2>
+        <p class='description'>Excursion remembers places you like, and recommends new point of interest around you.</p>
+        <p class='image'><img src="resources/images/camp.jpg" alt="A camp"> </p>
+        <p><img src="resources/images/phone.png" alt="Phone logo"></p>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <p><a href="#top">Download Excursion (Coming soon!)</a></p>
+    </main>
+    <footer>
+        <p>&copy Excursion</p>
+    </footer>
 </body>
 </html>
