--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
         
     <main>
-        <p class='video'><video src="resources/videos/excursion.mp4" autoplay></video></p>
+        <p class='video'><video src="resources/videos/excursion.mp4" autoplay loop></video></p>
         <h2>Your personal travel guide</h2>
         <p class='description'>Excursion remembers places you like, and recommends new point of interest around you.</p>
         <p class='image'><img src="resources/images/camp.jpg" alt="A camp"> </p>
